@@ -88,6 +88,7 @@ importer_issue_select_subfactory=Select at least one subfactory to import
 # Tutorial dialog
 tutorial=Tutorial
 interface=Interface
+pause=Pause
 usage=Usage
 matrix_solver=Matrix Solver
 interactive_tutorial_title=Interactive Tutorial
